# signal-engine

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
seeds/: greenhouse_companies.yaml
src/signal_engine/: cli.py  config.py  dedupe.py  pipeline.py  taxonomy.py
src/signal_engine/db/: models.py  session.py
src/signal_engine/matcher/: account_matcher.py
src/signal_engine/publishers/: slack.py
src/signal_engine/scoring/: scorer.py
src/signal_engine/sources/: base.py  greenhouse.py
tests/: test_account_matcher.py  test_dedupe.py  test_greenhouse.py  test_scorer.py  test_slack_publisher.py
tests/fixtures/: greenhouse_sample.json
